--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -25,9 +25,9 @@ nav {
 }
 
 nav h1 {
-  font-size: 2rem;
-  font-weight: 500;
-  color: #333;
+  color: #00d8ff;
+  font-size: 2.3rem;
+  font-weight: 600;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -86,7 +86,7 @@ main section ul li::before {
   margin-right: 10px;
   width: 10px;
   height: 10px;
-  background-color: #ccc;
+  background-color: #00d8ff;
   display: inline-block;
   border-radius: 50%;
 }
@@ -106,7 +106,7 @@ span::after {
 }
 
 footer {
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
   height: 50px;
@@ -116,4 +116,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+main section ul li {
+  line-height: 30px;
 }
